--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.rest-assured:rest-assured:4.4.0'
+	testImplementation 'org.assertj:assertj-core:4.0.0-M1'
+	testImplementation 'org.aeonbits.owner:owner:1.0.12'
 }
 
 test {
