--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 	testImplementation 'io.rest-assured:rest-assured:4.4.0'
 	testImplementation 'org.assertj:assertj-core:4.0.0-M1'
 	testImplementation 'org.aeonbits.owner:owner:1.0.12'
+	testImplementation('com.github.javafaker:javafaker:1.0.2') {
+		exclude group: 'org.yaml', module: 'snakeyaml'
+	}
+	testImplementation 'org.yaml:snakeyaml:2.0'
 }
 
 test {
