--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'io.qameta.allure' version '2.11.2'
 	id 'org.springframework.boot' version '2.7.18'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -24,6 +25,20 @@ repositories {
 	mavenCentral()
 }
 
+allure {
+	report {
+		version.set("2.21.0")
+	}
+	adapter {
+		aspectjWeaver.set(true)
+		frameworks {
+			junit5 {
+				adapterVersion.set("2.21.0")
+			}
+		}
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -40,6 +55,7 @@ dependencies {
 		exclude group: 'org.yaml', module: 'snakeyaml'
 	}
 	testImplementation 'org.yaml:snakeyaml:2.0'
+	testImplementation 'io.qameta.allure:allure-rest-assured:2.21.0'
 }
 
 test {
